Add LM test. Make LR test linear.

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -49,3 +49,24 @@
   publisher={JSTOR}
 }
 
+@article{guggenberger2012asymptotic,
+  title={On the asymptotic sizes of subset Anderson--Rubin and Lagrange multiplier tests in linear instrumental variables regression},
+  author={Guggenberger, Patrik and Kleibergen, Frank and Mavroeidis, Sophocles and Chen, Linchun},
+  journal={Econometrica},
+  volume={80},
+  number={6},
+  pages={2649--2666},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{kleibergen2002pivotal,
+  title={Pivotal statistics for testing structural parameters in instrumental variables regression},
+  author={Kleibergen, Frank},
+  journal={Econometrica},
+  volume={70},
+  number={5},
+  pages={1781--1803},
+  year={2002},
+  publisher={Wiley Online Library}
+}
