--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -70,3 +70,14 @@
   year={2002},
   publisher={Wiley Online Library}
 }
+
+@article{moreira2003conditional,
+  title={A conditional likelihood ratio test for structural models},
+  author={Moreira, Marcelo J},
+  journal={Econometrica},
+  volume={71},
+  number={4},
+  pages={1027--1048},
+  year={2003},
+  publisher={Wiley Online Library}
+}
