Update docs of CLR.

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -81,3 +81,14 @@
   year={2003},
   publisher={Wiley Online Library}
 }
+
+@article{kleibergen2021efficient,
+  title={Efficient size correct subset inference in homoskedastic linear instrumental variables regression},
+  author={Kleibergen, Frank},
+  journal={Journal of Econometrics},
+  volume={221},
+  number={1},
+  pages={78--96},
+  year={2021},
+  publisher={Elsevier}
+}
