--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -92,3 +92,25 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{hillier2009exact,
+  title={Exact properties of the conditional likelihood ratio test in an IV regression model},
+  author={Hillier, Grant},
+  journal={Econometric Theory},
+  volume={25},
+  number={4},
+  pages={915--957},
+  year={2009},
+  publisher={Cambridge University Press}
+}
+
+@article{hillier2009conditional,
+  title={On the conditional likelihood ratio test for several parameters in iv regression},
+  author={Hillier, Grant},
+  journal={Econometric Theory},
+  volume={25},
+  number={2},
+  pages={305--335},
+  year={2009},
+  publisher={Cambridge University Press}
+}
