Add guggenberger2019 more powerful AR critical value function.

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -114,3 +114,14 @@
   year={2009},
   publisher={Cambridge University Press}
 }
+
+@article{guggenberger2019more,
+  title={A more powerful subvector Anderson Rubin test in linear instrumental variables regression},
+  author={Guggenberger, Patrik and Kleibergen, Frank and Mavroeidis, Sophocles},
+  journal={Quantitative Economics},
+  volume={10},
+  number={2},
+  pages={487--526},
+  year={2019},
+  publisher={Wiley Online Library}
+}
