Add f-test back in.

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -125,3 +125,13 @@
   year={2019},
   publisher={Wiley Online Library}
 }
+
+
+@article{anderson1951estimating,
+  title={Estimating linear restrictions on regression coefficients for multivariate normal distributions},
+  author={Anderson, Theodore Wilbur},
+  journal={The Annals of Mathematical Statistics},
+  pages={327--351},
+  year={1951},
+  publisher={JSTOR}
+}
