--- a/docs/examples/acemoglu2001colonial.ipynb
+++ b/docs/examples/acemoglu2001colonial.ipynb
@@ -284,9 +284,7 @@
       "wald: 39.1013 (4e-10), ar: 51.2727 (8.03801e-13), f: 20 (8.4e-06)\n",
       "Column (8): 1.0062 (0.2517)\n",
       "wald: 15.9767 (6.4e-05), ar: 27.0786 (1.95353e-07), f: 8.6 (0.0033)\n",
-      "Column (9): 1.0118 (0.1868)\n",
-      "wald: 29.3431 (6.1e-08), ar: 46.8948 (7.49012e-12), f: 15 (0.00011)\n",
-      "Column (10): 1.2122 (0.3949)\n",
+      "Column (9): 1.2122 (0.3949)\n",
       "wald: 9.4226 (0.0021), ar: 23.7357 (1.10512e-06), f: 5.3 (0.022)\n"
      ]
     }
@@ -315,22 +313,20 @@
     "    # ivreg logpgp95 (avexpr=logem4) if f_brit==1, first\n",
     "    ([], \"f_brit==1\"),\n",
     "    # ivreg logpgp95 lat_abst (avexpr=logem4) if f_brit==1, first\n",
-    "    ([\"lat_abst\"], \"f_brit==1\"),  # ??\n",
+    "    ([\"lat_abst\"], \"f_brit==1\"),\n",
     "    # *--Columns 5 and 6 (Control for French legel origin)\n",
     "    # ivreg logpgp95 (avexpr=logem4) sjlofr, first\n",
-    "    ([\"sjlofr\"], None),  # ??\n",
+    "    ([\"sjlofr\"], None),\n",
     "    # ivreg logpgp95 lat_abst (avexpr=logem4) sjlofr, first\n",
-    "    ([\"lat_abst\", \"sjlofr\"], None),  # ??\n",
+    "    ([\"lat_abst\", \"sjlofr\"], None),\n",
     "    # *--Columns 7 and 8 (Religion dummies)\n",
     "    # ivreg logpgp95 (avexpr=logem4) catho80 muslim80 no_cpm80, first\n",
-    "    ([\"catho80\", \"muslim80\", \"no_cpm80\"], None),  # ok\n",
+    "    ([\"catho80\", \"muslim80\", \"no_cpm80\"], None),\n",
     "    # ivreg logpgp95 lat_abst (avexpr=logem4) catho80 muslim80 no_cpm80, first\n",
-    "    ([\"lat_abst\", \"catho80\", \"muslim80\", \"no_cpm80\"], None),  # ??\n",
+    "    ([\"lat_abst\", \"catho80\", \"muslim80\", \"no_cpm80\"], None), \n",
     "    # *--Columns 9 (Multiple controls)\n",
-    "    # ivreg logpgp95 (avexpr=logem4) f_french sjlofr catho80 muslim80 no_cpm80, first\n",
-    "    ([\"f_french\", \"sjlofr\", \"catho80\", \"muslim80\", \"no_cpm80\"], None),  # ??\n",
     "    # ivreg logpgp95 lat_abst (avexpr=logem4) f_french sjlofr catho80 muslim80 no_cpm80, first\n",
-    "    ([\"lat_abst\", \"f_french\", \"sjlofr\", \"catho80\", \"muslim80\", \"no_cpm80\"], None)  # ??\n",
+    "    ([\"lat_abst\", \"f_french\", \"sjlofr\", \"catho80\", \"muslim80\", \"no_cpm80\"], None)\n",
     "]):\n",
     "    data = df5 if filter is None else df5.copy().query(filter)\n",
     "    data = data[lambda x: x[outcome].notna()]\n",
