--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -135,3 +135,12 @@
   year={1951},
   publisher={JSTOR}
 }
+
+
+
+@article{scheidegger2025residual,
+  title={Residual Prediction Test for the Well-Specification of Linear IV Models},
+  author={Scheidegger, Cyrill and Londschien, Malte and Bühlmann, Peter},
+  journal={Working Paper},
+  year={2025},
+}
