--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -8,7 +8,7 @@
 }
 
 @article{jakobsen2022distributional,
-  title={Distributional robustness of K-class estimators and the PULSE},
+  title={Distributional robustness of K-class estimators and the {PULSE}},
   author={Jakobsen, Martin Emil and Peters, Jonas},
   journal={The Econometrics Journal},
   volume={25},
@@ -50,7 +50,7 @@
 }
 
 @article{guggenberger2012asymptotic,
-  title={On the asymptotic sizes of subset Anderson--Rubin and Lagrange multiplier tests in linear instrumental variables regression},
+  title={On the asymptotic sizes of subset {A}nderson--{R}ubin and {L}agrange multiplier tests in linear instrumental variables regression},
   author={Guggenberger, Patrik and Kleibergen, Frank and Mavroeidis, Sophocles and Chen, Linchun},
   journal={Econometrica},
   volume={80},
@@ -94,7 +94,7 @@
 }
 
 @article{hillier2009exact,
-  title={Exact properties of the conditional likelihood ratio test in an IV regression model},
+  title={Exact properties of the conditional likelihood ratio test in an {IV} regression model},
   author={Hillier, Grant},
   journal={Econometric Theory},
   volume={25},
@@ -105,7 +105,7 @@
 }
 
 @article{hillier2009conditional,
-  title={On the conditional likelihood ratio test for several parameters in iv regression},
+  title={On the conditional likelihood ratio test for several parameters in {IV} regression},
   author={Hillier, Grant},
   journal={Econometric Theory},
   volume={25},
@@ -116,7 +116,7 @@
 }
 
 @article{guggenberger2019more,
-  title={A more powerful subvector Anderson Rubin test in linear instrumental variables regression},
+  title={A more powerful subvector {A}nderson {R}ubin test in linear instrumental variables regression},
   author={Guggenberger, Patrik and Kleibergen, Frank and Mavroeidis, Sophocles},
   journal={Quantitative Economics},
   volume={10},
@@ -139,7 +139,7 @@
 
 
 @article{scheidegger2025residual,
-  title={Residual Prediction Test for the Well-Specification of Linear IV Models},
+  title={Residual Prediction Test for the Well-Specification of Linear {IV} Models},
   author={Scheidegger, Cyrill and Londschien, Malte and Bühlmann, Peter},
   journal={Working Paper},
   year={2025},
