--- a/docs/examples/tanaka2010risk.ipynb
+++ b/docs/examples/tanaka2010risk.ipynb
@@ -38,9 +38,9 @@
     "with ZipFile(\"112336-V1.zip\").open(\"20060431_data/20060431_risk.dta\") as file:\n",
     "    df = pd.read_stata(file)\n",
     "\n",
-    "y = df[\"vfctnc\"]\n",
+    "y = df[\"vfctnc\"]  # measure of risk preference\n",
     "C = df[[\"chinese\", \"edu\", \"market\", \"south\", \"gender\", \"age\"]]\n",
-    "X = df[[\"nmlrlincome\", \"mnincome\"]]\n",
+    "X = df[[\"mnincome\", \"nmlrlincome\"]]  # mean village income and income relative to the village mean\n",
     "Z = df[[\"rainfall\", \"headnowork\"]]\n",
     "\n",
     "tsls = KClass(kappa=\"tsls\").fit(Z=Z, X=X, y=y, C=C)\n",
@@ -99,7 +99,6 @@
       "\n",
       "Endogenous model statistic: 3.525, p-value: 0.1716\n",
       "(Multivariate) F-statistic: 6.07, p-value: 0.01375\n",
-      "J-statistic (LIML): 1.331e-12, p-value: nan\n",
       "\n",
       "Summary based on the anderson-rubin test.\n",
       "\n",
@@ -109,8 +108,7 @@
       "gender       -0.006189    0.01085    0.917      [-0.1212, 0.1187]\n",
       "\n",
       "Endogenous model statistic: 1.952, p-value: 0.1419\n",
-      "(Multivariate) F-statistic: 6.07, p-value: 0.01375\n",
-      "J-statistic (LIML): 1.331e-12, p-value: nan\n"
+      "(Multivariate) F-statistic: 6.07, p-value: 0.01375\n"
      ]
     }
    ],
@@ -189,7 +187,7 @@
       "              estimate  statistic  p-value                                 conf. set\n",
       "nmlrlincome    0.04893     0.1042   0.7469      [-10.39, -1.246] U [-0.1642, 0.3111]\n",
       "mnincome        0.0104      3.542  0.05983                       [0.003364, 0.01799]\n",
-      "gender       -0.005918   0.009855   0.9209  [-0.8529, -0.2543] U [-0.08144, 0.07243]\n",
+      "gender       -0.005918   0.009855   0.9209  [-0.8529, -0.2544] U [-0.08144, 0.07243]\n",
       "\n",
       "Endogenous model statistic: 3.975, p-value: 0.1371\n",
       "(Multivariate) F-statistic: 6.041, p-value: 0.04877\n",
@@ -248,9 +246,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
