--- a/docs/examples/card1993using.ipynb
+++ b/docs/examples/card1993using.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,6 @@
     }
    ],
    "source": [
-    "\n",
     "from ivmodels.tests import wald_test\n",
     "\n",
     "statistic, p_value = wald_test(Z=Z, X=X, C=C, y=y, beta=np.zeros(X.shape[1]))\n",
@@ -251,7 +250,9 @@
       "exp76      0.0616      6.638  0.009985      [0.01474, 0.1085]\n",
       "exp762  -0.001196      1.029    0.3104  [-0.003505, 0.001114]\n",
       "\n",
-      "Endogenous model statistic: 285, p-value: <1e-16\n"
+      "Endogenous model statistic: 285, p-value: <1e-16\n",
+      "(Multivariate) F-statistic: 15.48, p-value: 0.001451\n",
+      "J-statistic (LIML): 4.247, p-value: 0.1196\n"
      ]
     }
    ],
@@ -284,6 +285,19 @@
       "exp762  -0.0007127      1.495    0.2136  [-0.002967, 0.003183]\n",
       "\n",
       "Endogenous model statistic: 66.35, p-value: <1e-16\n",
+      "(Multivariate) F-statistic: 15.48, p-value: 0.001451\n",
+      "J-statistic (LIML): 4.247, p-value: 0.1196\n",
+      "\n",
+      "Summary based on the anderson-rubin (gkm) test.\n",
+      "\n",
+      "          estimate  statistic   p-value              conf. set\n",
+      "ed76        0.1724      5.029  0.001742       [0.0821, 0.3556]\n",
+      "exp76      0.05157      2.094   0.09866    [-0.02833, 0.09738]\n",
+      "exp762  -0.0007127      1.495    0.2025  [-0.002867, 0.003091]\n",
+      "\n",
+      "Endogenous model statistic: 66.35, p-value: <1e-16\n",
+      "(Multivariate) F-statistic: 15.48, p-value: 0.001451\n",
+      "J-statistic (LIML): 4.247, p-value: 0.1196\n",
       "\n",
       "Summary based on the conditional likelihood-ratio test.\n",
       "\n",
@@ -292,7 +306,9 @@
       "exp76      0.05157      2.035    0.1784  [-0.04518, 0.1018]\n",
       "exp762  -0.0007127      0.238    0.6443  [-0.003198, 0.004]\n",
       "\n",
-      "Endogenous model statistic: 327.5, p-value: 2.109e-15\n",
+      "Endogenous model statistic: 327.5, p-value: 1.443e-15\n",
+      "(Multivariate) F-statistic: 15.48, p-value: 0.001451\n",
+      "J-statistic (LIML): 4.247, p-value: 0.1196\n",
       "\n",
       "Summary based on the lagrange multiplier test.\n",
       "\n",
@@ -302,12 +318,14 @@
       "exp762  -0.0007127     0.2043   0.6512  [-0.01521, -0.003838] U [-0.003228, 0.005095]\n",
       "\n",
       "Endogenous model statistic: 325, p-value: <1e-16\n",
+      "(Multivariate) F-statistic: 15.48, p-value: 0.001451\n",
+      "J-statistic (LIML): 4.247, p-value: 0.1196\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for test in [\"anderson-rubin\", \"conditional likelihood-ratio\", \"lagrange multiplier\"]:\n",
+    "for test in [\"anderson-rubin\", \"anderson-rubin (gkm)\", \"conditional likelihood-ratio\", \"lagrange multiplier\"]:\n",
     "    print(liml.summary(X=X, Z=Z, C=C, y=y, feature_names=features, test=test))\n",
     "    print(\"\")"
    ]
