Adjust the rest of the code

--- a/docs/examples/card1993using.ipynb
+++ b/docs/examples/card1993using.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -155,10 +155,10 @@
     "from ivmodels.models import KClass\n",
     "\n",
     "tsls = KClass(kappa=\"tsls\").fit(Z=Z, X=X, y=y, C=C)\n",
-    "print(tsls.named_coefs_[:4])\n",
+    "print(tsls.named_coef_[:4])\n",
     "\n",
     "liml = KClass(kappa=\"liml\").fit(Z=Z, X=X, y=y, C=C)\n",
-    "print(liml.named_coefs_[:4])"
+    "print(liml.named_coef_[:4])"
    ]
   },
   {
