--- a/docs/examples/tanaka2010risk.ipynb
+++ b/docs/examples/tanaka2010risk.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "tsls = KClass(kappa=\"tsls\").fit(Z=Z, X=X, y=y, C=C)\n",
     "\n",
     "features = [\"nmlrlincome\", \"mnincome\", \"gender\"]\n",
-    "print(tsls.named_coefs_[[\"nmlrlincome\", \"mnincome\", \"gender\"]])"
+    "print(tsls.named_coef_[[\"nmlrlincome\", \"mnincome\", \"gender\"]])"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
    "source": [
     "liml = KClass(kappa=\"liml\").fit(Z=Z, X=X, y=y, C=C)\n",
     "print(f\"{liml.kappa_=:}\")\n",
-    "print(liml.named_coefs_[features])"
+    "print(liml.named_coef_[features])"
    ]
   },
   {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,11 +202,11 @@
     "Z = df[[\"rainfall\", \"headnowork\", \"rainfallxheadnowork\"]]\n",
     "\n",
     "tsls = KClass(kappa=\"tsls\").fit(Z=Z, X=X, y=y, C=C)\n",
-    "print(tsls.named_coefs_[features])\n",
+    "print(tsls.named_coef_[features])\n",
     "print(\"\")\n",
     "\n",
     "liml = KClass(kappa=\"liml\").fit(Z=Z, X=X, y=y, C=C)\n",
-    "print(liml.named_coefs_[features])\n",
+    "print(liml.named_coef_[features])\n",
     "print(\"\")\n",
     "\n",
     "for test in [\n",
