--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -136,11 +136,50 @@
   publisher={JSTOR}
 }
 
-
-
 @article{scheidegger2025residual,
-  title={Residual Prediction Test for the Well-Specification of Linear {IV} Models},
-  author={Scheidegger, Cyrill and Londschien, Malte and Bühlmann, Peter},
-  journal={Working Paper},
-  year={2025},
+  title={A Residual Prediction Test for the Well-Specification of Linear Instrumental Variable Models},
+  author={Scheidegger, Cyrill and Londschien, Malte and B{\"u}hlmann, Peter},
+  journal={arXiv preprint arXiv:2506.12771},
+  year={2025}
+}
+
+@article{sargan1958estimation,
+  title={The estimation of economic relationships using instrumental variables},
+  author={Sargan, John D},
+  journal={Econometrica: Journal of the econometric society},
+  pages={393--415},
+  year={1958},
+  publisher={JSTOR}
+}
+@article{hansen1982large,
+  title={Large sample properties of generalized method of moments estimators},
+  author={Hansen, Lars Peter},
+  journal={Econometrica: Journal of the econometric society},
+  pages={1029--1054},
+  year={1982},
+  publisher={JSTOR}
+}
+
+@article{meinshausen2009p,
+  title={P-values for high-dimensional regression},
+  author={Meinshausen, Nicolai and Meier, Lukas and B{\"u}hlmann, Peter},
+  journal={Journal of the American Statistical Association},
+  volume={104},
+  number={488},
+  pages={1671--1681},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+
+
+@article{cragg1997inferring,
+  title={Inferring the rank of a matrix},
+  author={Cragg, John G and Donald, Stephen G},
+  journal={Journal of Econometrics},
+  volume={76},
+  number={1-2},
+  pages={223--250},
+  year={1997},
+  publisher={Elsevier}
 }
