One level down.

--- a/docs/examples/card1993using.ipynb
+++ b/docs/examples/card1993using.ipynb
@@ -287,9 +287,10 @@
    "id": "3b1d7c71-f9b7-4c58-a87e-aebe4927fcf5",
    "metadata": {},
    "source": [
-    "# Estimators\n",
     "\n",
-    "We compare the ordinary least-squares (OLS), two-stage least-squares (TSLS), and limited information maximum likelihood (LIML) estimators applied to Card's (1995) data."
+    "## Estimators\n",
+    "\n",
+    "We compare the ordinary least-squares (OLS), two-stage least-squares (TSLS), and limited information maximum likelihood (LIML) estimators applied to Card's dataset."
    ]
   },
   {
@@ -434,7 +435,8 @@
    "id": "60c475b3-b38a-4416-be5e-7d73db69b084",
    "metadata": {},
    "source": [
-    "# Tests for the causal parameter\n",
+    "\n",
+    "## Tests for the causal parameter\n",
     "\n",
     "We test the null hypothesis \n",
     "$$H_0 \\colon \\text{ The causal effect of education on log wages } \\beta_0 = 0$$\n",
@@ -488,6 +490,7 @@
    "id": "54ab1442",
    "metadata": {},
    "source": [
+    "\n",
     "# Testing model assumptions"
    ]
   },
@@ -552,7 +555,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.6869718742810358, 0.045804380122060895)"
+       "(1.6869718742813247, 0.04580438012203314)"
       ]
      },
      "execution_count": 10,
@@ -590,7 +593,7 @@
     {
      "data": {
       "text/plain": [
-       "0.10588417814373718"
+       "0.1058841781437827"
       ]
      },
      "execution_count": 11,
@@ -633,7 +636,7 @@
     {
      "data": {
       "text/plain": [
-       "0.003990876020777634"
+       "0.003990876020778189"
       ]
      },
      "execution_count": 12,
@@ -659,7 +662,8 @@
    "id": "aa1fab57",
    "metadata": {},
    "source": [
-    "# Confidence Sets"
+    "\n",
+    "## Confidence Sets"
    ]
   },
   {
