This header as well.

--- a/docs/examples/card1993using.ipynb
+++ b/docs/examples/card1993using.ipynb
@@ -491,7 +491,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Testing model assumptions"
+    "## Testing model assumptions"
    ]
   },
   {
