Implement more powerful clr critical values

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -183,3 +183,15 @@
   year={1997},
   publisher={Elsevier}
 }
+
+
+@article{kleibergen2007generalizing,
+  title={Generalizing weak instrument robust {IV} statistics towards multiple parameters, unrestricted covariance matrices and identification statistics},
+  author={Kleibergen, Frank},
+  journal={Journal of Econometrics},
+  volume={139},
+  number={1},
+  pages={181--216},
+  year={2007},
+  publisher={Elsevier}
+}
