--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -195,3 +195,10 @@
   year={2007},
   publisher={Elsevier}
 }
+
+@article{londschien2025exact,
+  title={The exact distribution of the conditional likelihood-ratio test in instrumental variables regression},
+  author={Londschien, Malte},
+  journal={arXiv preprint},
+  year={2025}
+}
